fix letter spacing and change block 5

--- a/inc/assets/sass/rtl.scss
+++ b/inc/assets/sass/rtl.scss
@@ -885,6 +885,8 @@ section{
 
 .about-us{
 	color: #fff;
+	letter-spacing: 1px;
+	word-spacing: 3px;
 	h1{
 		color: #fff;
 		font-family: $alexandria-regular;
